--- a/personApi/src/main/resources/application.properties
+++ b/personApi/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.driverClassname=org.h2.Driver
-spring.datasource.url = jdbc:h2:mem:personApi
-spring.datasource.username = sa
-spring.datasource.password =
+spring.datasource.url = jdbc:mysql://localhost:3306/personapibd
+spring.datasource.username = estudos
+spring.datasource.password = password
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.show_sql=true
